; ModuleID = '/home/carl/AnghaBench/sway/sway/input/extr_seatop_move_floating.c_handle_motion.c'
source_filename = "/home/carl/AnghaBench/sway/sway/input/extr_seatop_move_floating.c_handle_motion.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_seat = type { %struct.TYPE_2__*, %struct.seatop_move_floating_event* }
%struct.TYPE_2__ = type { %struct.wlr_cursor* }
%struct.wlr_cursor = type { i64, i64 }
%struct.seatop_move_floating_event = type { i32, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sway_seat*, i32, double, double)* @handle_motion to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @handle_motion(%struct.sway_seat* %0, i32 %1, double %2, double %3) #0 {
  %5 = alloca %struct.sway_seat*, align 8
  %6 = alloca i32, align 4
  %7 = alloca double, align 8
  %8 = alloca double, align 8
  %9 = alloca %struct.seatop_move_floating_event*, align 8
  %10 = alloca %struct.wlr_cursor*, align 8
  store %struct.sway_seat* %0, %struct.sway_seat** %5, align 8
  store i32 %1, i32* %6, align 4
  store double %2, double* %7, align 8
  store double %3, double* %8, align 8
  %11 = load %struct.sway_seat*, %struct.sway_seat** %5, align 8
  %12 = getelementptr inbounds %struct.sway_seat, %struct.sway_seat* %11, i32 0, i32 1
  %13 = load %struct.seatop_move_floating_event*, %struct.seatop_move_floating_event** %12, align 8
  store %struct.seatop_move_floating_event* %13, %struct.seatop_move_floating_event** %9, align 8
  %14 = load %struct.sway_seat*, %struct.sway_seat** %5, align 8
  %15 = getelementptr inbounds %struct.sway_seat, %struct.sway_seat* %14, i32 0, i32 0
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load %struct.wlr_cursor*, %struct.wlr_cursor** %17, align 8
  store %struct.wlr_cursor* %18, %struct.wlr_cursor** %10, align 8
  %19 = load %struct.seatop_move_floating_event*, %struct.seatop_move_floating_event** %9, align 8
  %20 = getelementptr inbounds %struct.seatop_move_floating_event, %struct.seatop_move_floating_event* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = call i32 @desktop_damage_whole_container(i32 %21)
  %23 = load %struct.seatop_move_floating_event*, %struct.seatop_move_floating_event** %9, align 8
  %24 = getelementptr inbounds %struct.seatop_move_floating_event, %struct.seatop_move_floating_event* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 8
  %26 = load %struct.wlr_cursor*, %struct.wlr_cursor** %10, align 8
  %27 = getelementptr inbounds %struct.wlr_cursor, %struct.wlr_cursor* %26, i32 0, i32 1
  %28 = load i64, i64* %27, align 8
  %29 = load %struct.seatop_move_floating_event*, %struct.seatop_move_floating_event** %9, align 8
  %30 = getelementptr inbounds %struct.seatop_move_floating_event, %struct.seatop_move_floating_event* %29, i32 0, i32 2
  %31 = load i64, i64* %30, align 8
  %32 = sub nsw i64 %28, %31
  %33 = load %struct.wlr_cursor*, %struct.wlr_cursor** %10, align 8
  %34 = getelementptr inbounds %struct.wlr_cursor, %struct.wlr_cursor* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = load %struct.seatop_move_floating_event*, %struct.seatop_move_floating_event** %9, align 8
  %37 = getelementptr inbounds %struct.seatop_move_floating_event, %struct.seatop_move_floating_event* %36, i32 0, i32 1
  %38 = load i64, i64* %37, align 8
  %39 = sub nsw i64 %35, %38
  %40 = call i32 @container_floating_move_to(i32 %25, i64 %32, i64 %39)
  %41 = load %struct.seatop_move_floating_event*, %struct.seatop_move_floating_event** %9, align 8
  %42 = getelementptr inbounds %struct.seatop_move_floating_event, %struct.seatop_move_floating_event* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 8
  %44 = call i32 @desktop_damage_whole_container(i32 %43)
  ret void
}

declare dso_local i32 @desktop_damage_whole_container(i32) #1

declare dso_local i32 @container_floating_move_to(i32, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
